--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,8 @@
 
       <input type="file" name="img" >
       <input type="submit" name="btn" value="Predict">
+      
+      <h1>{{data}}</h1>
 
 
     </form>
