--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <form action="prediction" method="POST" enctype="multipart/form-data">
 
       <input type="file" name="img" >
-      <input type="submit" name="btn" value="Predict">
+      <input type="submit" name="btn">
 
       <h1>{{data}}</h1>
 
